[plugin/test] Plugin test with jdk14 (#5352)
* plugin test with jdk14

* introduce jdk14 container

* remove docker:build

* remove BUILD_NO and introduct image_version

* Update docs/en/guides/Plugin-test.md

Co-authored-by: kezhenxu94 <kezhenxu94@163.com>

Co-authored-by: 吴晟 Wu Sheng <wu.sheng@foxmail.com>
Co-authored-by: kezhenxu94 <kezhenxu94@apache.org>
Co-authored-by: kezhenxu94 <kezhenxu94@163.com>